<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdfaeb"
    tools:context=".activities.CajeroActivity">

    <TextView
        android:id="@+id/lblSaludo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3b3f49"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTransacciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:text="@string/lbl_transacciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3b3f49"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConsignar"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="472dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/btn_consignar"
        android:textColor="#fdfaeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRetirar"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/btn_retirar"
        android:textColor="#fdfaeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="300dp"
        android:text="@string/lbl_saldo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3b3f49"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSaldoDispo"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="76dp"
        android:textColor="#3b3f49"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEliminarCuenta"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginTop="644dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/btn_eliminar_cuenta"
        android:textColor="#fdfaeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>